--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "videotweet",
   "version": "1.0.0",
   "description": "Video Stream platform + twitting feature",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Mohit Agarwal",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.3",
+    "prettier": "^3.3.1"
+  }
 }
